# Multi_Modal_Search_Engine

./: .gitignore  LICENSE  README.md  demo.py  pyproject.toml
Myenv/: pyvenv.cfg
src/components/data_ingestion/crawler/: __init__.py
src/constants/: __init__.py
src/exception/: __init__.py
